<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.devxperiments.flaglivewallpaper" >

    <PreferenceCategory android:title="@string/prefFlagSettingCategory" >
        <Preference
            android:key="single_flag"
            android:title="@string/prefSelectFlagSng"
            android:summary="@string/prefSelectFlagSummary" />

        <ListPreference
            android:defaultValue="flag_fullscreen"
            android:entries="@array/pref_flag_mode_entries"
            android:entryValues="@array/pref_flag_mode_values"
            android:key="flag_mode_setting"
            android:summary="@string/prefFlagModeSummary"
            android:title="@string/prefFlagMode" />

        <!--
             CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="day_time_sky"
            android:summary="Il cielo cambia a seconda dell&apos;ora"
            android:title="Cielo basato su day time" /
        -->

        <Preference
            android:key="sky_image"
            android:summary="@string/prefBackgroundSummary"
            android:title="@string/prefBackground" />

        <com.devxperiments.flaglivewallpaper.settings.AlphaSliderPreference
            android:key="alpha"
            android:persistent="true"
            android:summary="@string/prefTransparencySummary"
            android:title="@string/prefTransparency" />
        
            <ListPreference
            android:defaultValue="normal"
            android:entries="@array/pref_flag_speed_entries"
            android:entryValues="@array/pref_flag_speed_values"
            android:key="flag_speed"
            android:summary="@string/prefFlagSpeedSummary"
            android:title="@string/prefFlagSpeed" />
    </PreferenceCategory>
    <!--PreferenceCategory android:title="Immagine Bandiera" >
        <ListPreference
            android:defaultValue="single_flag"
            android:entries="@array/pref_flag_image_entries"
            android:entryValues="@array/pref_flag_image_values"
            android:key="flag_image_setting"
            android:summary="Scegli tra singola o multi"
            android:title="Tipo Immagine" />

        <EditTextPreference
            android:defaultValue="10"
            android:dialogMessage="Inserisci il tempo in minuti"
            android:dialogTitle="Tempo Aggiornamento"
            android:key="multi_flag_time"
            android:summary="Tempo tra un cambio e un altro"
            android:title="Tempo Aggiornamento" />
    </PreferenceCategory-->
    <PreferenceCategory android:title="@string/prefOtherCategory" >
        <Preference
            android:key="default"
            android:title="@string/prefDefault" />
        <Preference
            android:key="feedback"
            android:title="@string/prefFeedback" />
        <Preference
            android:key="credits"
            android:title="@string/prefCredits" />
    </PreferenceCategory>

</PreferenceScreen>